istio/gateway.yaml
# istio gateway
###############################################################
# ISTIO INGRESS GATEWAY
# Accepts external traffic into the mesh
###############################################################

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ecommerce-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway   # Use Istio's default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"  # Allow all hosts (adjust for production)
